# dicom-viewer-app

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dicom-visualizer.desktop  setup.sh  standarts.md
include/DicomViewer/: Debug.h  Types.h
resources/: clean-medical.qss  resources.qrc
src/: main.cpp
src/application/dto/: ImageBuffer.h  ReportData.h
src/application/ports/: IDicomLoader.h  IImageRenderer.h  IReportGenerator.h
src/core/: CDicomImage.cpp  CDicomImage.h  CDicomLoader.cpp  CDicomLoader.h  CDicomMetadata.cpp  CDicomMetadata.h
src/infrastructure/dcmtk/: DcmtkDicomLoader.cpp  DcmtkDicomLoader.h
src/infrastructure/qt/: QtImageRenderer.cpp  QtImageRenderer.h  QtReportGenerator.cpp  QtReportGenerator.h
src/presentation/viewmodels/: MainViewModel.cpp  MainViewModel.h
src/ui/: CImageViewer.cpp  CImageViewer.h  CMainWindow.cpp  CMainWindow.h  CMetadataPanel.cpp  CMetadataPanel.h  CThumbnailWidget.cpp  CThumbnailWidget.h
src/utils/: CColorPalette.cpp  CColorPalette.h  CImageConverter.cpp  CImageConverter.h
